--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<p>copywrite &copy; by Shreya Roy</p>
 		</div>
 	</div>
-<iframe src='https://webchat.bot.framework.com/embed/health-talk-ugy7kc9?s=R2lP1Xbsq2Q.4XgbRhzbLwxHrnaV6TGmkfxvNz2JJpEMdL3gbQ-ErqY' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<iframe src="https://webchat.botframework.com/embed/health-talk-ugy7kc9? R2lP1Xbsq2Q.4XgbRhzbLwxHrnaV6TGmkfxvNz2JJpEMdL3gbQ-ErqY' style='min-width: 400pc width: 100% min- height 500px"></iframe>
 </footer>
 <!-- //footer -->
 
